demo model added

--- a/gss-bid-model/.gitignore
+++ b/gss-bid-model/.gitignore
@@ -1,4 +1,12 @@
-# Python
+__pycache__/
+.pytest_cache/
+data/
+models/
+*.pyc
+*.pkl
+*.joblib
+env/
+.env# Python
 __pycache__/
 *.py[cod]
 *$py.class
