--- a/gss-bid-model/k8s/deployment.yaml
+++ b/gss-bid-model/k8s/deployment.yaml
@@ -1,6 +1,55 @@
 apiVersion: apps/v1
 kind: Deployment
 metadata:
+  name: gss-bid-model
+  labels:
+    app: gss-bid-model
+spec:
+  replicas: 2
+  selector:
+    matchLabels:
+      app: gss-bid-model
+  template:
+    metadata:
+      labels:
+        app: gss-bid-model
+    spec:
+      containers:
+        - name: gss-bid-model
+          image: "REPLACE_WITH_IMAGE:latest"
+          imagePullPolicy: IfNotPresent
+          ports:
+            - containerPort: 8000
+          env:
+            - name: MODEL_DIR
+              value: "/app/models"
+            - name: FRED_API_KEY
+              valueFrom:
+                secretKeyRef:
+                  name: gss-bid-secrets
+                  key: FRED_API_KEY
+          readinessProbe:
+            httpGet:
+              path: /health
+              port: 8000
+            initialDelaySeconds: 10
+            periodSeconds: 10
+          livenessProbe:
+            httpGet:
+              path: /health
+              port: 8000
+            initialDelaySeconds: 30
+            periodSeconds: 20
+          resources:
+            requests:
+              memory: "512Mi"
+              cpu: "250m"
+            limits:
+              memory: "1Gi"
+              cpu: "1"
+apiVersion: apps/v1
+kind: Deployment
+metadata:
   name: bid-model
   labels:
     app: bid-model
