--- a/gss-bid-model/k8s/service.yaml
+++ b/gss-bid-model/k8s/service.yaml
@@ -1,6 +1,20 @@
 apiVersion: v1
 kind: Service
 metadata:
+  name: gss-bid-model-service
+  labels:
+    app: gss-bid-model
+spec:
+  selector:
+    app: gss-bid-model
+  ports:
+    - protocol: TCP
+      port: 80
+      targetPort: 8000
+  type: LoadBalancer
+apiVersion: v1
+kind: Service
+metadata:
   name: bid-model-service
   labels:
     app: bid-model
