--- a/gss-bid-model/requirements.txt
+++ b/gss-bid-model/requirements.txt
@@ -1,4 +1,15 @@
-# Core ML Libraries
+numpy==1.24.3
+pandas==2.2.2
+scikit-learn==1.3.2
+xgboost==1.7.6
+fastapi==0.100.0
+uvicorn==0.23.1
+joblib==1.3.2
+python-dotenv==1.0.0
+prometheus-client==0.17.1
+fredapi==0.4.4
+shap==0.42.1
+requests==2.31.0# Core ML Libraries
 numpy>=1.21.0
 pandas>=1.3.0
 scikit-learn>=0.24.2
